--- a/tf.yaml
+++ b/tf.yaml
@@ -105,3 +105,22 @@
         fstype: ext4
         state: mounted
 
+    - name: install nfs server and exports home dir
+      become: true
+      apt:
+        name: nfs-kernel-server
+
+    - name: change /etc/exports file
+      become: true 
+      lineinfile:
+        state: present
+        dest: /etc/exports
+        regexp: '/home/mind            192.168.10.1/24\(ro,sync,insecure,no_root_squash,no_subtree_check\)'
+        line: '/home/mind            192.168.10.1/24(ro,sync,insecure,no_root_squash,no_subtree_check)'
+      register: exports_file_change
+
+    - name: restart nfs server
+      become: true
+      service: name=nfs-kernel-server state=restarted
+      when: exports_file_change|failed
+
