--- a/tf.yml
+++ b/tf.yml
@@ -2,8 +2,8 @@
 - hosts: tf
 
   roles:
-#    - upgrade
-#    - fstab_nfs
-#    - zsh
-#    - anaconda
+    - upgrade
+    - fstab_nfs
+    - zsh
+    - anaconda
     - nvidia
