fix nvidia install bug

--- a/roles/monitors/tasks/Ubuntu.yml
+++ b/roles/monitors/tasks/Ubuntu.yml
@@ -1,6 +1,5 @@
 ---
-- name: install text ui traffic monitor: iftop
+- name: install text ui traffic monitor iftop
   become: true
   apt:
     name: iftop
-
