rename git clone back to git clone

--- a/roles/tf_test/tasks/git.yml
+++ b/roles/tf_test/tasks/git.yml
@@ -45,3 +45,12 @@
           msg: "{{ item }}"
     with_items:
       - https://github.com/tensorflow/tensorflow.git
+
+- name: clone projects to git user
+  become: true
+  become_user: git
+  include: git_clone.yml projectUrl={{ item }}
+  with_items:
+    - git@github.com:peace0phmind/ansible_self.git
+    - git@github.com:tensorflow/tensorflow.git
+    - git@github.com:tensorflow/models.git
