--- a/roles/tf_test/tasks/git_sync_clone.yml
+++ b/roles/tf_test/tasks/git_sync_clone.yml
@@ -1,8 +1,7 @@
 ---
-- name: reget user variables to fix become_user bugs
-  setup:
-
-- set_fact: projectDir={{ ansible_user_dir }}/{{ projectUrl|regex_replace('git@', '')|regex_replace(':', '/') }}
+#reget user variables to fix become_user bugs
+- setup:
+- set_fact: projectDir={{ ansible_user_dir }}/{{ projectUrl|regex_replace('git@', '')|regex_replace('git://', '')|regex_replace('https://', '')|regex_replace('http://', '')|regex_replace(':', '/') }}
 
 - stat:
     path: "{{ projectDir }}"
@@ -10,14 +9,10 @@
 
 - name: git clone {{ projectUrl }}
   command: "git clone --mirror {{ projectUrl }} {{ projectDir }}"
-#  async: 10800
-#  poll: 0
   when: project_dir_stat.stat.exists == false
 
 - name: git fetch {{ projectUrl }}
   command: git fetch
   args:
     chdir: "{{ projectDir }}"
-#  async: 45
-#  poll: 0
   when: project_dir_stat.stat.exists == true
