--- a/roles/nvidia/tasks/Ubuntu.yml
+++ b/roles/nvidia/tasks/Ubuntu.yml
@@ -88,8 +88,8 @@
   lineinfile:
     state: present
     dest: ~/.zshrc
-    regexp: 'export LD_LIBRARY_PATH=/usr/local/cuda/lib64:\$LD_LIBRARY_PATH'
-    line: 'export LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH'
+    regexp: 'export LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:\$LD_LIBRARY_PATH'
+    line: 'export LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:$LD_LIBRARY_PATH'
 
 - name: Extract cudnn driver into /usr/local
   become: true
